# weekly_report

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  docker-entrypoint-api.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_audit_events.py  003_enterprise_orgs_schedules_storage.py  004_add_llm_generate.py
apps/api/app/: celery_app.py  cli.py  config.py  crypto_util.py  database.py  deps.py  main.py  request_util.py  schemas.py  security.py  template_presets.py  token_vault.py
apps/api/app/models/: __init__.py
apps/api/app/plugins/: pm.py
apps/api/app/routers/: audit.py  auth.py  git_connections.py  health.py  metrics.py  oidc.py  organizations.py  profiles.py  public_hooks.py  reports.py
apps/api/app/services/: audit.py  git_client.py  integrations_notify.py  llm_generate.py  llm_polish.py  object_storage.py  org_bootstrap.py  report_builder.py
apps/api/app/tasks/: report_tasks.py  schedule_tasks.py
apps/web/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.tsx  api.ts  index.css  types.ts
apps/web/src/components/: Layout.tsx  Toast.tsx
apps/web/src/pages/: ConnectionsPage.tsx  Dashboard.tsx  Login.tsx  ProfileEditPage.tsx  ProfilesPage.tsx  ReportsPage.tsx
deploy/helm/week-report/: Chart.yaml  values.yaml
deploy/helm/week-report/templates/: _helpers.tpl  api.yaml  beat.yaml  ingress.yaml  postgres.yaml  redis.yaml  secret.yaml  web.yaml  worker.yaml
docs/: ARCHITECTURE.md
