[project]
name = "week-report-api"
version = "0.1.0"
description = "Week Report API (FastAPI + Celery)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg[binary]==3.2.3",
    "celery[redis]==5.4.0",
    "redis==5.2.1",
    "httpx==0.28.1",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "cryptography==44.0.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.17",
    "email-validator==2.2.0",
    "croniter==5.0.1",
    "authlib==1.4.1",
    "structlog==24.4.0",
    "boto3==1.35.76",
    "typer==0.15.1",
    "prometheus-client==0.21.1",
]
